# smart-school-attendance

./: README.md
attendance/: README.md  attendance_records.json  attendance_students.json  farida.py  pyproject.toml  requirements.txt
