[project]
name = "school"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai-agents>=0.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
